# lib

./: .envrc  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.base.sh  .pre-commit-config.base.yaml  .pre-commit-config.yaml  .tool-versions  404.html  AGENTS.md  CLAUDE.md  CODE_PRACTICES.md  DEVELOPER.md  Dockerfile.base  Dockerfile.dockerignore  ISSUE_TEMPLATE.md  Makefile  Makefile.base  Makefile.lite  Pipfile  README-WORKFLOW.md  README.md  SECURITY.md  agents.md  api-keys.yaml  claude-desktop.json  dependabot.yml  docker-compose.base.env  docker-compose.base.yml  dockerignore.base  envrc.base  gitattributes.base  gitignore.base  gitignore.full  include.ai.mk  include.avg.mk  include.docker.mk  include.gcp.base.mk  include.gcp.mk  (+71 more)
.devcontainer/: Dockerfile  README.md  compose.yaml  devcontainer.json  post-create.sh
TNE-CONTEXT/: .last-seen  activeContext.md  decisionLog.md  devPrompts.md  progress.md  systemPatterns.md
doc/: index.html
docs/: cloud-ide-and-standardization.md  doc.md  files.md  index.md  install.md
docs.base/: .pages  index.md
docs.full/: doc.md  files.md  ref.md
files/: index.html
github/: PULL_REQUEST_TEMPLATE.md  README-WORKFLOW.md
install/: index.html
polkit-1/: 52-network-manager.pkla  56-sources-refresh.pkla
ref/: index.html
scripts/: ai-test.sh  ai-warn-bridges.sh
search/: search_index.json
tests/: lib-config.bats  lib-secrets.bats
workflow.base/: README.md  claude-review.yml  claude-security.yml  claude-triage.yml  claude.yml  dependabot.automerge.workflow.yaml  lint.workflow.yaml  (+9 more)
(+8 files in other folders)
